# librga

./: .gitignore  Makefile.am  config.h.in  configure.ac  drmrga.h  librk_rga.pc.in
build-aux/: git-version-gen
inc/: RgaApi.h  RockchipRga.h  RockchipRgaMacro.h  rga.h
lib/: Makefile.am  RgaApi.cpp  RockchipRga.cpp
lib/normal/: Makefile.am  NormalRga.c  NormalRga.h  NormalRgaApi.cpp
tests/: .gitignore  Makefile.am  rgaRotation.cpp
